--- a/web_pwa_oca/static/description/index.html
+++ b/web_pwa_oca/static/description/index.html
@@ -377,7 +377,7 @@ If you’re building a web app today, you’re already on the path towards build
 <ul class="simple">
 <li>Developers Info.</li>
 </ul>
-<p>The service worker is contructed using ‘Odoo Class’ to have the same class inheritance behaviour that in the ‘user pages’. Be noticed
+<p>The service worker is constructed using ‘Odoo Class’ to have the same class inheritance behaviour that in the ‘user pages’. Be noticed
 that ‘Odoo Bootstrap’ is not supported so, you can’t use ‘require’ here.</p>
 <p>All service worker content can be found in ‘static/src/js/worker’. The management between ‘user pages’ and service worker is done in
 ‘pwa_manager.js’.</p>
