[14.0][FIX][IMP] web_ir_actions_act_multi: uninstall issue
This commit fixes uninstallation issue of web_ir_actions_act_multi module. At the time uninstallation, it removes several columns like name, binding_model_id, binding_type, binding_view_types... from ir_actions, ir_act_server, etc. This makes the database not usable anymore.

--- a/web_ir_actions_act_multi/static/description/index.html
+++ b/web_ir_actions_act_multi/static/description/index.html
@@ -427,6 +427,7 @@ If you spotted it first, help us to smash it by providing a detailed and welcome
 </ul>
 </li>
 <li>Manuel Calero - Tecnativa</li>
+<li>Sajad KK</li>
 </ul>
 </div>
 <div class="section" id="maintainers">
