--- a/web_field_tooltip/static/description/index.html
+++ b/web_field_tooltip/static/description/index.html
@@ -370,7 +370,7 @@ ul.auto-toc {
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 <p><a class="reference external image-reference" href="https://odoo-community.org/page/development-status"><img alt="Beta" src="https://img.shields.io/badge/maturity-Beta-yellow.png" /></a> <a class="reference external image-reference" href="http://www.gnu.org/licenses/agpl-3.0-standalone.html"><img alt="License: AGPL-3" src="https://img.shields.io/badge/licence-AGPL--3-blue.png" /></a> <a class="reference external image-reference" href="https://github.com/OCA/web/tree/17.0/web_field_tooltip"><img alt="OCA/web" src="https://img.shields.io/badge/github-OCA%2Fweb-lightgray.png?logo=github" /></a> <a class="reference external image-reference" href="https://translation.odoo-community.org/projects/web-17-0/web-17-0-web_field_tooltip"><img alt="Translate me on Weblate" src="https://img.shields.io/badge/weblate-Translate%20me-F47D42.png" /></a> <a class="reference external image-reference" href="https://runboat.odoo-community.org/builds?repo=OCA/web&amp;target_branch=17.0"><img alt="Try me on Runboat" src="https://img.shields.io/badge/runboat-Try%20me-875A7B.png" /></a></p>
 <p>This module gives the possibility to add tooltips next to fields labels
-on any field of a model. The tooltip displays an html field.</p>
+on any field of a model.</p>
 <p><strong>Table of contents</strong></p>
 <div class="contents local topic" id="contents">
 <ul class="simple">
@@ -396,7 +396,7 @@ field you selected, the tooltip appear.</li>
 <li>You can also go directly on the form view of a model on which you
 want to add a tooltip and use the Manage tooltips Action to add a new
 tooltip, or edit or delete existing tooltips for this model.</li>
-<li>For manager users, they can decide to display an helper to add a
+<li>For manager users, they can decide to display a helper to add a
 tooltip on a field as some fields are not displayed with a label.</li>
 </ul>
 </div>
